# Artemis

./: .clang-tidy  .gitignore  LICENSE.md  README.md  meson.build  meson_options.txt
docs/: escape_sequences.md
kernel/: artemis.cpp  logger.cpp  main.cpp  meson.build
kernel/arch/amd64/: arch.cpp  meson.build
kernel/arch/amd64/cpu/: cpu.cpp  cpuid.cpp  exceptions.S  features.cpp  gdt.S  gdt.cpp  idt.cpp  meson.build  registers.cpp
kernel/arch/amd64/devices/: meson.build  serials.cpp
kernel/arch/amd64/memory/: meson.build  paging.cpp  vmm.cpp
kernel/drivers/: interrupt.cpp  meson.build
kernel/include/: artemis.h  logger.hpp
kernel/include/arch/amd64/: arch.hpp  mmu.hpp
kernel/include/arch/amd64/asm/: internal.h  macro.h  regs.h
kernel/include/arch/amd64/cpu/: cpu.hpp  cpuid.hpp  features.hpp  gdt.hpp  idt.hpp  interrupts.hpp  registers.hpp
kernel/include/arch/amd64/devices/: serials.hpp
kernel/include/arch/amd64/memory/: paging.hpp
kernel/include/drivers/: interrupt.hpp
kernel/include/libs/: bitmap.hpp  stacktrace.hpp
kernel/include/memory/: memory.hpp  phys.hpp  vmm.hpp
kernel/include/memory/virtual/: page_entry.hpp
kernel/libs/: abort.cpp  assert.cpp  cxa_at_exit.cpp  meson.build  stacktrace.cpp  stdio.cpp  ubsan.cpp
kernel/memory/: memory.cpp  meson.build  phys.cpp  vmm.cpp
libc/: ctype.c  meson.build
libc/abi/: crti.cpp  crtn.cpp  meson.build
libc/include/: assert.h  stdio.h  string.h
libc/include/sys/: defs.h
libc/stdio/: fputc.cpp  local.cpp  local.h  meson.build  printf.cpp  putc.cpp  vprintf.cpp
meson/analysis/clang-tidy/: clang-tidy.sh  meson.build
meson/compiler/: meson.build
meson/compiler/c/: meson.build
meson/compiler/cpp/: meson.build
meson/emulators/qemu/: meson.build
meson/format/: .clang-format  format.sh  meson.build
meson/packaging/xorriso/: meson.build
scripts/: limine.cfg  link-kernel.amd64.ld  make_version.sh
